# example-ts-go-grpc-bazel

./: .gitignore  README.md  go.mod  go.sum
viz/: BUILD.bazel  README.md  WORKSPACE  latest_rules_nodejs.patch  package.json
viz/httpserver/custom_devserver/: BUILD.bazel  custom_devserver.go
viz/httpserver/frontendpb/: BUILD.bazel  frontend.proto
viz/httpserver/graphservice/: BUILD.bazel  graphservice.go
viz/local_labs_npm_prebuilt/: package.json
viz/local_labs_npm_prebuilt/grpc_web/: _BUILD.bazel  package.json
viz/local_labs_npm_prebuilt/protobufjs/: _BUILD.bazel  package.json
viz/src/: BUILD.bazel  tsconfig.json
viz/src/app/home/: BUILD.bazel  home.html  home.ts
viz/src/example/: index.html
