load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

package(default_visibility = ["//:__subpackages__"])

# ts_library and ng_module use the `//:tsconfig.json` target
# by default. This alias allows omitting explicit tsconfig
# attribute.
alias(
    name = "tsconfig.json",
    actual = "//src:tsconfig.json",
)

k8s_deploy(
    name = "deploy",
    images = {
        "gcr.io/internal-200822/src:nodejs_image": "//src:image",
    },
    template = ":deployment.yaml",
)

# Just a dummy test so that we have a test target for //... on certain bazelci platforms with bazel_integration_test
sh_test(
    name = "dummy_test",
    srcs = ["dummy_test.sh"],
)

load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/gonzojive/example-ts-go-grpc-bazel/viz
# gazelle:exclude node_modules
# gazelle:exclude dist
# gazelle:exclude bazel-out
gazelle(name = "gazelle")
